--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
+    "@react-navigation/stack": "^6.3.7",
+    "@ui-kitten/components": "^5.1.2",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.14.0",
+    "install": "^0.13.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "^18.2.0",
+    "react-native": "0.70.5",
+    "react-native-element": "^1.2.1",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "^13.6.0",
+    "react-native-web": "^0.18.10",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
